k8s/care-user-medicine-inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: care-user-medicine-inventory
  name: care-user-medicine-inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: care-user-medicine-inventory
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.service: care-user-medicine-inventory
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Staging
          image: vcaf/care-user-medicine-inventory
          name: care-user-medicine-inventory
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
