k8s/care-frontend-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: care-frontend-tcp
  name: care-frontend-tcp
spec:
  ports:
    - name: "3030"
      port: 3030
      targetPort: 3030
  selector:
    io.kompose.service: care-frontend
  type: LoadBalancer
status:
  loadBalancer: {}
