k8s/care-medicine-inventory-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: care-medicine-inventory-tcp
spec:
  type: NodePort
  selector:
    app: care-medicine-inventory
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31000
